@@ -1,8 +1,9 @@
 AUX tpserver.conf 1001 RMD160 faf1d5eb7eaa83e5a30e7b4d50165149588ef35a SHA1 4b41e33d791811a8624fad8ee812ec6f0c107e8d SHA256 3675a1ee1cf4ae467b521d71653d75f179b7f5536590df34d01d223099aa3361
 DIST tpserver-cpp-0.4.1.tar.gz 800432 RMD160 fc3516f1c33aada2a40cddc8c2ad7ee6d85d1955 SHA1 ad21a3d4cb8cba5d84d8a32ad65da338047561c1 SHA256 71e10f6e660a6ba10a2d47314893001f416792b72d78be30922a7c2dde1a8133
 DIST tpserver-cpp-0.5.0.tar.gz 895399 RMD160 829a773bb6184e08f902f0cb21db8d8e2c080602 SHA1 f6df744d7a35ede479090656c49deb7460878273 SHA256 7f124c345d945a3886a0573bf78fead78831b9af68abd276b67186430a22c1c2
+DIST tpserver-cpp-0.5.1.tar.gz 910924 RMD160 199f2aba0089383ca86dc0f5f5a9034cd565c012 SHA1 bff34c02d8ef685a06d906a792655ce182bc5a24 SHA256 5542a7445a2f8cb7bc0fd37c3c664fb5f93aadabdf1befbdc81d3df2b3f54ff4
 EBUILD tpserver-cpp-0.4.1.ebuild 1020 RMD160 ebf0839601b244903d76d69521a2f643a8279bf2 SHA1 2771b507a09f5b710643db2b228dea741d10c123 SHA256 3303065e36b37fb9d389ca18559714e80ee4b49cd4420b56d5b10fbd2fbe4ce5
 EBUILD tpserver-cpp-0.5.0.ebuild 1343 RMD160 a9523e0e0af0b5e251962c9859d8d46530793608 SHA1 bb5e369071f91cb438abc2adc73066fca09fcf25 SHA256 446762f31d6af6a1fb3e324fd73c395283544c35750e72efe286d76b0e5d5de0
-MISC .tpserver-cpp-0.4.1.ebuild.swp 12288 RMD160 96f4bc667aba6e6ed77088683cdc1dd3e68cf578 SHA1 da50cc9d7fffaaf65b79e01c9876bff439e75efa SHA256 a333519e004826db1d4380bd1de0774a95864466313cb48826105a602e77f2cc
-MISC ChangeLog 595 RMD160 692b115c169be87532f09adf1dff8aa729eee8bf SHA1 c5a2e8e0b2d22b6fb88f404a3e6fb229cb6ee218 SHA256 0f8a0ec2b681b61952b3d6612ef1d85f487234eb64cafb2c63748e862d89ac39
+EBUILD tpserver-cpp-0.5.1.ebuild 1343 RMD160 a9523e0e0af0b5e251962c9859d8d46530793608 SHA1 bb5e369071f91cb438abc2adc73066fca09fcf25 SHA256 446762f31d6af6a1fb3e324fd73c395283544c35750e72efe286d76b0e5d5de0
+MISC ChangeLog 723 RMD160 a410e2f1f0049067e5ca18aac8c7c43621bdf8e3 SHA1 aa9ddb7a46a6a7d156dd366b9e58f0ea3daf5593 SHA256 b4673f95435f115a7acbe723d398273c82258d9416803a9445cc2d6126aa437b
 MISC metadata.xml 332 RMD160 28be196bd790f6bcfcecc629fbf4ce97b3364a24 SHA1 dfca2d8c53772720037e0f1cc64f0e9867cfcc0a SHA256 0ada152869a9d95832438d11fd527b8e2016092b0908721da628ee2d99841357
