@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tpserver-cpp-0.5.1 (30 Jun 2008)
+
+  30 Jun 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.1.ebuild:
+  New version
+
   30 Jun 2008; Aaron Mavrinac <mavrinac@gmail.com> tpserver-cpp-0.5.0.ebuild:
   Added Boost dependency and use games eclass
 
